# jsonrpc-debugger

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  proxy.rs  ui.rs
tests/: app_tests.rs  integration_tests.rs  proxy_tests.rs
