[package]
name = "jsonrpc-debugger"
version = "0.1.1"
edition = "2021"
authors = ["Shane Jonas <shane@shanejonas.com>"]
description = "A terminal-based JSON-RPC debugger with interception capabilities"
license = "MIT"
repository = "https://github.com/shanejonas/jsonrpc-debugger"
homepage = "https://github.com/shanejonas/jsonrpc-debugger"
documentation = "https://docs.rs/jsonrpc-debugger"
readme = "README.md"
keywords = ["jsonrpc", "debugger", "proxy", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools::debugging", "network-programming"]
exclude = [
    ".github/*",
    "*.md",
    "tests/*",
]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "brotli"] }
tokio-tungstenite = "0.21"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
warp = "0.3"
uuid = { version = "1.17.0", features = ["v4"] }
tempfile = "3.20.0"
flate2 = "1.0"
